<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JuSiAI</string>

    <string name="meeting_limited_service">This product is for demo purposes only, single meeting duration does not exceed 30 minutes</string>
    <string name="class_limited_service">This product is for demo purposes only, single class duration does not exceed 30 minutes</string>
    <string name="create_input_room_id_hint">Please enter room ID</string>
    <string name="create_input_room_id_length_warn">Room ID cannot exceed 6 characters</string>
    <string name="create_input_room_id_content_warn">Please enter numbers, letters or symbols @_-</string>
    <string name="create_input_user_name_hint">Please enter nickname</string>
    <string name="create_input_user_name_content_warn">Please enter Chinese, numbers, letters or symbols @_-</string>
    <string name="create_input_user_name_length_warn">Nickname cannot exceed 8 characters</string>
    <string name="create_join_meeting">Join Room</string>
    <string name="error_room_full">Room is full</string>
    <string name="error_user_counts_limit">Room member count has reached limit</string>
    <string name="request_permission_tips">For better experience, please grant VERTC microphone and camera permissions</string>
    <string name="request_cam_permission_tips">Camera permission not granted, go to settings to grant VERTC this permission?</string>
    <string name="request_mic_permission_tips">Microphone permission not granted, go to settings to grant VERTC this permission?</string>
    <string name="request_permission_go_setting">Go to Settings</string>
    <string name="microphone_switch">Microphone Switch</string>
    <string name="camera_switch">Camera Switch</string>
    <string name="flip_camera">Flip Camera</string>

    <string name="connecting">Connecting</string>
    <string name="request_rtm_fail">Error getting RTM configuration, reconnecting</string>
    <string name="privacy_agreement">Privacy Policy</string>
    <string name="user_agreement">User Agreement</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="permission_list">Permission List</string>
    <string name="license_list">License List</string>
    <string name="business_license">Business License</string>
    <string name="telecom_license">Telecom Business License</string>
    <string name="net_culture_license">Internet Culture Business License</string>
    <string name="demo_version_label">Version</string>
    <string name="sdk_version_label">SDK Version</string>
    <string name="user_name_label">Username</string>
    <string name="tab_scenes">Home</string>
    <string name="tab_camera">Device</string>
    <string name="tab_profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="exit_login">Sign Out</string>
    <string name="delete_account_tips">After deletion, the data of the current account will be deleted and cannot be recovered.</string>

    <string name="settings_title">Meeting Settings</string>
    <string name="settings_video_resolution">Resolution</string>
    <string name="settings_video_frame_rate">Frame Rate</string>
    <string name="settings_frame_rate">%dfps</string>
    <string name="settings_video_bit_rate">Bitrate</string>
    <string name="settings_bit_rate">%dkbps</string>
    <string name="settings_video_log">Real-time Video Parameters</string>
    <string name="settings_screen_resolution">Screen Share Resolution</string>
    <string name="settings_screen_frame_rate">Screen Share Frame Rate</string>
    <string name="settings_screen_bit_rate">Screen Share Bitrate</string>
    <string name="settings_view_history_meetings">View Meeting History</string>
    <string name="settings_view_my_history_meetings">My Cloud Recordings</string>

    <string name="on_ask_open_mic">%s requested to turn on your microphone</string>
    <string name="on_ask_open_cam">%s requested to turn on your camera</string>

    <string name="need_permit_to_mic">Cannot turn on microphone yourself, please request permission from %s</string>
    <string name="request_turn_on_mic">%s is requesting to speak</string>
    <string name="request_turn_on_mic_multi">%d users are requesting to speak</string>
    <string name="need_permit_to_share">No sharing permission, please request from %s</string>
    <string name="request_turn_on_share">%s is requesting sharing permission</string>
    <string name="request_turn_on_share_multi">%d users are requesting to share</string>
    <string name="request_record">%s is requesting to record</string>
    <string name="already_request_record">Recording request sent to %s</string>

    <string name="users_title">Members (%d)</string>
    <string name="login_duplicate_login">A user with the same ID has logged in, you have been forced offline</string>

    <string name="audio_route_speaker">Speaker</string>
    <string name="audio_route_earpiece">Earpiece</string>
    <string name="stats_info">Statistics</string>
    <string name="action_record">Record</string>
    <string name="action_stop_record">Stop Recording</string>
    <string name="action_setting">Settings</string>
    <string name="device_mic">Microphone</string>
    <string name="device_camera">Camera</string>
    <string name="action_share">Share</string>
    <string name="action_share_screen">Share Screen</string>
    <string name="action_share_wb">Share Whiteboard</string>
    <string name="action_participant">Members</string>
    <string name="action_more">More</string>
    <string name="info_room_id">Room ID: </string>
    <string name="info_remind_time">%s</string>
    <string name="room_id_copied">Room ID copied</string>
    <string name="mute_all_audio">Mute All</string>
    <string name="meeting_close_option_finish">End Meeting</string>
    <string name="close_option_broadcaster_leave">Leave Temporarily</string>
    <string name="meeting_close_option_audience_leave">Leave Meeting</string>
    <string name="close_option_cancel">Cancel</string>
    <string name="recording">Recording</string>
    <string name="student_stop_recording_hint">Only teacher can stop recording</string>
    <string name="sharing_screen_local_tips">You are sharing screen</string>
    <string name="sharing_audio">Share Device Audio</string>
    <string name="sharing_stop">Stop Sharing</string>
    <string name="replaced_by_sharing_screen">%s is sharing screen</string>
    <string name="replaced_by_sharing_white_board">%s is sharing whiteboard</string>
    <string name="failed_mute_mic_all">Failed to mute all, please try again</string>
    <string name="failed_mute_mic">Failed to mute, please try again</string>
    <string name="mute_all_audio_tips">Mute all and newly joined %s</string>
    <string name="mic_mute">%s has muted you</string>
    <string name="mic_permission_granted">%s turned on microphone</string>
    <string name="mic_unumte_request_success">Microphone request sent</string>
    <string name="mic_unumte_request_failed">Failed to send microphone request</string>
    <string name="cam_mute">%s has turned off your camera</string>
    <string name="cam_unumte_request_success">Camera request sent</string>
    <string name="cam_unumte_request_failed">Failed to send camera request</string>
    <string name="grant_share_permission_tips">Grant sharing permission?</string>
    <string name="share_permission_granted">%s has granted you sharing permission</string>
    <string name="revert_share_permission_tips">Revoke sharing permission?</string>
    <string name="share_permission_reverted">Sharing permission has been revoked</string>
    <string name="who_is_speaking">Speaking: %s</string>
    <string name="share_screen">Share Screen</string>
    <string name="share_whiteboard">Share Whiteboard</string>
    <string name="black_whiteboard">Whiteboard</string>
    <string name="stop_whiteboard">Exit Whiteboard</string>
    <string name="wb_add_page">Add Page</string>
    <string name="wb_page_info">%1$d/%2$d</string>
    <string name="wb_pen_size">Pen Size</string>
    <string name="wb_pen_color">Pen Color</string>
    <string name="wb_text_size">Text Size</string>
    <string name="wb_text_color">Text Color</string>
    <string name="wb_shape">Shape Type</string>
    <string name="wb_shape_size">Line Size</string>
    <string name="wb_shape_color">Line Color</string>
    <string name="wb_size_small">Small</string>
    <string name="wb_size_mid">Medium</string>
    <string name="wb_size_large">Large</string>
    <string name="record_confirm_title">Start recording?</string>
    <string name="record_start">Start Recording</string>
    <string name="record_confirm_content">Recording is for demo purposes only, single recording duration does not exceed 15 minutes, recording files are kept for 1 week</string>
    <string name="record_already_started">Recording started</string>
    <string name="record_already_stopped">Recording stopped</string>
    <string name="record_already_stopped_time_limit">15-minute recording limit reached, recording has been stopped</string>
    <string name="tips_dialog_title">Tips</string>
    <string name="tips_time_limit">Demo time has ended</string>
    <string name="me_tag"> (Me)</string>
    <string name="open_mic_as_host_demand">%s has unmuted you</string>
    <string name="start_record_rejected">Recording rejected</string>
    <string name="share_rejected">%s rejected</string>
    <string name="screen_capture_not_supported">System version too low, screen sharing not supported</string>
    <string name="screen_capture_no_media_projection">This phone cannot enable screen sharing</string>
    <string name="screen_capture_hint">Recording/casting your screen</string>

    <string name="scene_meeting">Join Meeting</string>
    <string name="create_choose_role_host">I\'m Host</string>
    <string name="create_choose_role_attendee">I\'m Attendee</string>
    <string name="error_host_exist">This room already has another host</string>

    <string name="scene_class_small">Start Meeting</string>
    <string name="create_choose_role_teacher">I\'m Teacher</string>
    <string name="create_choose_role_student">I\'m Student</string>
    <string name="error_teacher_exist">This room already has another teacher</string>

    <string name="scene_class_large">Large Class</string>

    <string name="role_host_desc_meeting">Host</string>
    <string name="role_participant_desc_meeting">Attendee</string>
    <string name="role_host_desc_class">Teacher</string>
    <string name="role_participant_desc_class">Student</string>
    <string name="waiting_teacher">Waiting for teacher to join room</string>
    <string name="edu_close_option_finish">Close Room</string>
    <string name="edu_close_option_audience_leave">Leave Room</string>
    <string name="class_small">Small Class</string>
    <string name="class_large">Large Class</string>
    <string name="already_apply_link_mic">Already applied for audio link</string>
    <string name="revert_apply_link_mic">Cancel audio link request?</string>
    <string name="network_lost_tips">Network connection lost, please check settings.</string>

    <string name="common_cancel">Cancel</string>

    <!-- My Meetings List -->
    <string name="my_meetings_title">My Meetings</string>
    <string name="meeting_id_label">Meeting ID</string>
    <string name="participant_count">%d participant</string>
    <string name="participant_count_plural">%d participants</string>
    <string name="join_meeting_toast">Join meeting: %s</string>

</resources>