<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_room_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:fitsSystemWindows="false"
    tools:context="com.jusi.jusiai.feature.createroom.CreateMeetingActivity"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/create_room_camera_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- 视频渲染容器 -->
            <FrameLayout
                android:id="@+id/video_renderer_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- 控制按钮容器 -->
            <LinearLayout
                android:id="@+id/preview_control_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:elevation="10dp">

                <!-- 麦克风开关 -->
                <ImageView
                    android:id="@+id/preview_mic_switch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_create_room_btn"
                    android:padding="12dp"
                    android:src="@drawable/ic_mic_on_night"
                    android:contentDescription="@string/microphone_switch" />

                <!-- 摄像头开关 -->
                <ImageView
                    android:id="@+id/preview_camera_switch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_create_room_btn"
                    android:padding="12dp"
                    android:src="@drawable/ic_camera_on_night"
                    android:contentDescription="@string/camera_switch" />

                <!-- 前后摄像头切换 -->
                <ImageView
                    android:id="@+id/preview_camera_flip"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_create_room_btn"
                    android:padding="12dp"
                    android:src="@drawable/ic_switch_camera_night"
                    android:contentDescription="@string/flip_camera" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

        <RadioGroup
            android:id="@+id/create_room_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/create_room_role_host"
                style="@style/RadioButtonLg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_choose_role_host"
                android:textSize="@dimen/txt_H1_18sp" />

            <RadioButton
                android:id="@+id/create_room_role_attendee"
                style="@style/RadioButtonLg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/create_choose_role_attendee" />

        </RadioGroup>

        <EditText
            android:id="@+id/create_room_id"
            style="@style/EditTextLg"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/create_input_room_id_hint"/>

        <View
            style="@style/DividerLine"
            android:layout_marginTop="10dp"
            android:background="@color/room_input_divider_bg" />

        <TextView
            android:id="@+id/create_room_id_waring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/create_input_room_id_length_warn"
            android:textColor="@color/waring_normal"
            android:textSize="@dimen/txt_H3_14sp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/create_room_user_name"
            style="@style/EditTextLg"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/create_input_user_name_hint" />

        <View
            style="@style/DividerLine"
            android:layout_marginTop="10dp"
            android:background="@color/room_input_divider_bg" />

        <TextView
            android:id="@+id/create_room_user_name_waring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/create_input_user_name_content_warn"
            android:textColor="@color/waring_normal"
            android:textSize="@dimen/txt_H3_14sp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/create_room_join"
            style="@style/ButtonLg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/create_join_meeting" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/title_bar_layout"
        layout="@layout/layout_title_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/create_room_mic"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/bg_create_room_btn"
            android:padding="12dp"
            android:src="@drawable/ic_mic_night"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/create_room_camera"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/create_room_camera"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/bg_create_room_btn"
            android:padding="12dp"
            android:src="@drawable/ic_camera_night"
            app:layout_constraintLeft_toRightOf="@id/create_room_mic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>